--- a/app.html
+++ b/app.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>App Name: A Coding Project by Brent Snoddy</title>
+    <title>Hundo: A Coding Project by Brent Snoddy</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -14,13 +14,16 @@
 
     <link href="css/site.css" rel="stylesheet">
     <link rel="icon" type="image/png" href="img/favicon-32x32.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Racing+Sans+One&display=swap" rel="stylesheet">
 
 </head>
 <body class="d-flex flex-column h-100">
     <!--===NAV SECTION===-->
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-lite">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="/img/Color logo - no background.svg" class="d-inline-block align-text-top" alt="logo" width="30" height="26">  App Name</a>
+        <a class="navbar-brand logoFont" href="#"><img src="/img/Color logo - no background.svg" class="d-inline-block align-text-top" alt="logo" width="30" height="26">  Hundo</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -49,8 +52,42 @@
 </nav>
 <!--===MAIN SECTION===-->
 <main class="flex-shrink-0">
-    <div class="container">
+    <div class="container mt-5">
+        <div class="row row-cols-1 row-cols-lg-2">
+            <div class="col-lg-4 col border-end border-2">
+                <h1>Hundo: A Coding Project</h1>
+                <h4 class="lead"></h4>
+                <h2 class="mt-5 border-bottom border-2">INSTRUCTIONS</h2>
+                <p>Enter a Starting Value and an Ending Value. Press the button and the values will appear.</p>
+            </div>
+            <div class="col-lg-8 col">
+                <div>
+                    <h3>Enter Values</h3>
+                    <form class="row gy-2 gx-3">
+                        <div class="col">
+                            <input id="startValue" type="number" class="form-control" placeholder="Start Value" value= 0 aria-label="Start Value">
 
+                        </div>
+                        <div class="col">
+                            <input id="endValue" type="number" class="form-control" placeholder="end Value" value= 100 aria-label="End Value">
+                        </div>
+                        <div class="col-12 d-flex justify-content-end">
+                            <button id="btnSubmit" type="button" class="btn btn-dark btn-lg">GO!</button>
+                        </div>
+                    </form>
+                    <h2 class="mt-5 border-bottom border-2">Results</h2>
+                    <div class="table-responsive">
+                        <table class="table table-striped table-sm">
+                            <tbody id="results">
+                                <!--RESULTS GO HERE-->
+
+                            </tbody>
+
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </main>
 <!--===FOOTER SECTION===-->
@@ -81,6 +118,9 @@
  integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
 </script>
 <script src="js/site.js"></script>
+<script>
+    document.getElementById("btnSubmit").addEventListener("click", getValues);
+</script>
 </body>
 
 </html>
